# tellme

./: .gitignore  Cargo.toml  README.md  install_rust.ps1  run_fetch_data.bat  run_tellme.bat  test_setup.sh
src/: auto_update.rs  content.rs  database.rs  lib.rs  main.rs  ui.rs
src-tauri/: Cargo.toml  create_icon.ps1  tauri.conf.json
src-tauri/src/: content.rs  database.rs  main.rs
static/: app.js  index.html  styles.css
tellme_data/: tellme.db
